--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "serve": "^12.0.0",
+    "socket.io-client": "^4.3.2",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
@@ -47,5 +48,6 @@
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "4.0.0-beta.3"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
